src/code-tests.css
:host
{
    --gap: 7px;
    --gap-small: 3px;
    --gap-medium: 14px;
    --gap-large: 24px;
    
    --surface-success: oklch(93.96% 0.05 148.74);
    --primary-success: oklch(58.83% 0.158 145.05);
    --border-success: solid 1px var(--primary-success);

    --surface-fail: oklch(88.98% 0.052 3.28);
    --primary-fail: oklch(45.8% 0.177 17.7);
    --border-fail: solid 1px var(--primary-fail);

    --surface-process: oklch(89.66% 0.046 260.67);
    --primary-process: oklch(43.48% 0.17 260.2);
    --border-process: solid 1px var(--primary-process);


    --surface-footer: rgb(0 0 0 / .04);
    
    --success-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%232e943a" d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>');
    --info-icon: url('data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%2022.812714%2022.814663%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Asvg%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20style%3D%22fill%3Atransparent%3Bstroke%3Atransparent%3Bstroke-width%3A0.999999%3Bstroke-linejoin%3Around%3Bstroke-miterlimit%3A6.3%3Bstroke-dasharray%3Anone%3Bstroke-dashoffset%3A29.2913%3Bstroke-opacity%3A1%22%20d%3D%22M%2022.295505%2C11.407332%20A%2010.889144%2C10.889144%200%200%201%2011.406424%2C22.296479%2010.889144%2C10.889144%200%200%201%200.51720881%2C11.407332%2010.889144%2C10.889144%200%200%201%2011.406424%2C0.51818382%2010.889144%2C10.889144%200%200%201%2022.295505%2C11.407332%20Z%22%3E%3C%2Fpath%3E%3Cpath%20d%3D%22m%2013.945668%2C4.3053761%20c%200.150778%2C-0.96462%20-0.30687%2C-1.43709%20-1.36997%2C-1.43709%20-1.063%2C0%20-1.668452%2C0.47247%20-1.81923%2C1.43709%20-0.150779%2C0.96462%200.306971%2C1.43708%201.369971%2C1.43708%201.004%2C0%201.66845%2C-0.47246%201.819229%2C-1.43708%20z%20M%2011.693889%2C17.829726%2013.373994%2C7.0811161%20h%20-2.9333%20L%208.7605887%2C17.829726%20Z%22%20style%3D%22font-size%3A19.6861px%3Bfont-family%3APassageway%3B-inkscape-font-specification%3APassageway%3Bfill%3A%23a30d30%3Bstroke-width%3A2.5%3Bstroke-linejoin%3Around%3Bstroke-miterlimit%3A6.3%3Bstroke-dashoffset%3A29.2913%22%20aria-label%3D%22i%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');


    display: grid;
    gap: var(--gap);
    grid-auto-rows: max-content;
    font-family: sans-serif;
    font-size: 12px;
}
@media (prefers-color-scheme: dark) 
{
    :host
    {
        --surface-footer: rgb(255 255 255 / .1);
    }
}

#header
{
    flex: 1;
    display: flex;
    align-items: center;
    gap: var(--gap);
}
#title
{
    flex: 1;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#tests
,#component-content
{
    display: grid;
    gap: var(--gap-small);
    grid-auto-rows: max-content;
}

#header button
{
    align-self: stretch;
    display: inline-flex;
    align-items: center;
    gap: var(--gap-small);
}

button .reset-icon
{
    width: 1em;
    height: 1em;
    transform: scaleX(-1);
    margin-inline: 3px;
}

/* Run button */
button .arrow-icon
{
    width: .75em;
    height: .75em;
    transform: rotate(-90deg);
    margin-inline: 3px;
}
:host(.running) .run-all-button-icon
,:host(.fail) .run-all-button-icon
{
    transform: rotate(0);
}

/* Dropdown Layout */
summary > .run-test-button
, #run-all-button
{
    justify-self: flex-end;
    margin-left: auto;
}

summary:not(#component-summary)
{
    padding: var(--gap-small);
}
#component-summary
{
    padding: var(--gap) var(--gap-small);
    border-bottom: solid 1px;
    margin-bottom: var(--gap-small);
}


/* Dropdown Markers */
summary
{
    display: flex;
    align-items: center;
    gap: var(--gap);
}
summary > .arrow-icon
{
    background: var(--arrow-icon);
    transform: rotate(-90deg);
    transition: transform ease-out 90ms;
    width: .6em;
    height: .6em;
}
details[open] > summary > .arrow-icon
{
    transform: rotate(0);
}

#enabled
{
    display: none;
}
:host([optional]) #enabled
{
    display: block;
}

/* Result Icon */
.result-icon
{
    --background-size: 16px;
    width: var(--background-size);
    height: var(--background-size);

    display: flex;
    align-items: center;
    justify-content: center;

    border: solid 1px currentColor;
    border-radius: 50%;
}
.result-icon::before
{
    content: '⋯';
    font-size: 10px;
}

:host(.running) #component-summary .result-icon
,.test.running .test-summary > .result-icon
,.hook.running .result-icon
,.processing-details.running .processing-result-icon
{
    border: var(--border-process);
    background: var(--surface-process);
}
:host(.success) #component-summary .result-icon
,.test.success .test-summary > .result-icon
,.hook.success .result-icon
,.processing-details.success .processing-result-icon
{
    border: var(--border-success);
    background: var(--surface-success)
    var(--success-icon);
    background-repeat: no-repeat;
    background-position: center;
    background-size: var(--icon-size, 12px) var(--icon-size, 12px);
}
:host(.fail) #component-summary .result-icon
,.test.fail .test-summary > .result-icon
,.hook.fail .result-icon
,.processing-details.fail .processing-result-icon
{
    border: var(--border-fail);
    background: var(--surface-fail)
    var(--info-icon);
    background-size: var(--icon-size, 16px) var(--icon-size, 16px);
    background-repeat: no-repeat;
    background-position: center;
    transform: rotate(175deg);
}
:host(:is(.success,.fail)) #component-summary .result-icon::before
,.test:is(.success,.fail) .test-summary > .result-icon::before
,.hook:is(.success,.fail) .result-icon::before
,.processing-details:is(.success,.fail) .processing-result-icon::before
{
    display: none;
}
:host(.running) #component-summary .result-icon::before
,.test:is(.running) .test-summary > .result-icon::before
,.hook:is(.running) .result-icon::before
,.processing-details:is(.running) .processing-result-icon::before
{
    content: '';
    --color: var(--primary-process, currentColor);
    --animation-timing-function: linear;
    --animation-duration: 2s;
    width: var(--icon-size, 14px);
    height: var(--icon-size, 14px);
    mask-image: radial-gradient(circle at 50% 50%, transparent calc(var(--icon-size, 14px) / 3), black calc(var(--icon-size, 14px) / 3));
    background-image: conic-gradient(transparent, transparent 135deg, var(--color));
    border-radius: 50%;
    animation: var(--animation-timing-function) var(--animation-duration) infinite spin;
    margin: 2px;
}

/* Smaller Result icon settings for sub-test icons */
.before-each-result-icon
,.after-each-result-icon
,.processing-result-icon
{
    --background-size: 12px;
}
.before-each-result-icon::before
,.after-each-result-icon::before
,.processing-result-icon::before
{
    font-size: 9px;
}
.hook.success .before-each-result-icon
,.hook.success .after-each-result-icon
,.processing-details.success .processing-result-icon
{
    --icon-size: 8px;
}
.hook.fail .before-each-result-icon
,.hook.fail .after-each-result-icon
,.processing-details.fail .processing-result-icon
{
    --icon-size: 12px;
}
.hook:is(.running) .before-each-result-icon::before
,.hook:is(.running) .after-each-result-icon::before
,.processing-details:is(.running) .processing-result-icon::before
{
    --icon-size: 9px;
}

/* Hook Display */
.hook
{
    display: none;
}
:host(.has-before-all-hook) #before-all-details
,:host(.has-after-all-hook) #after-all-details
{
    display: initial;
}
:host(.has-before-each-hook) .before-each-details
,:host(.has-after-each-hook) .after-each-details
{
    display: initial;
}
:host(.has-required-before-hook) #required-before-any-details
,:host(.has-required-after-hook) #required-after-any-details
{
    display: initial;
}

/* Test Display */
code-test .results
{
    display: grid;
    gap: var(--gap-small);
    padding-inline-start: 1em;
}

code-test .results details .result
,.hook > .results
{
    margin-inline-start: 1em;
}

.result.message:empty
{
    padding: .5em 1em;
}
.result.message:empty::before
{
    content: '[ this function has not been run ]';
    font-family: monospace;
    font-size: 12px;
    font-style: italic;
}

/* Ordered Display */
#tests
{
    counter-reset: tests;
}
code-test
{
    counter-increment: tests;
}
code-test > details > summary > .description
{
    flex: 1;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 0; /* hack to make overflow work right; "contain: inline-size" is correct fix, but it's too new to implement on jan 25, 2026; */
}
:host(:not([ordered="false"])) code-test > details > summary > .description::before
{
    content: counter(tests) ". ";
}

/* Hook Name */
.hook-name,.processing-description
{
    border-radius: 3px;
    border: solid 1px;
    font-family: monospace;
    text-transform: uppercase;
    font-size: 11px;
    padding: 3px 7px;
}

#footer
{
    display: flex;
    justify-content: flex-end;
    border-top: solid 1px;
    border-bottom: solid 1px;
    background: var(--surface-footer);
    margin-top: var(--gap-small);
}
#group-results
{
    display: flex;
    gap: var(--gap);
    padding: var(--gap);
}

#results-progress-value
{
    min-width: 40px;
    width: auto;
}

#duration
,#passed-total-pair
,#passed-total-percent
{
    white-space: nowrap;
}

#passed-total-percent::before
{
    content: '(';
}
#passed-total-percent::after
{
    content: ')';
}

@keyframes spin
{
    from { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}

